# PXA270-Bite

xes-utils-0.7/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  TODO  config.h.in  configure  configure.ac  xes-utils.spec.in
xes-utils-0.7/src/: Makefile.am  Makefile.in  functions-xes.sh  xes-getty  xes-gpio  xes-led  xes-showecc  xes-showtemp  xes-sysinfo
xes-utils-base-0.18/: ChangeLog  Makefile.in  NEWS  configure  configure.ac
xes-utils-base-0.18/el/: xes-utils-base.spec.in
xes-utils-base-0.18/gentoo/: xes-init.in  xes-utils-base.ebuild.in
xes-utils-base-0.18/src/: functions-xes.sh  functions-xes.sh.in  xes-getty  xes-gpio  xes-i2c-register  xes-kernel-make  xes-led  xes-showecc  xes-showtemp  xes-sysinfo
xes-utils-base-0.9/: ChangeLog  Makefile.am  NEWS  README  configure  configure.ac
xes-utils-base-0.9/el/: e2fsck.conf  xes-init.in  xes-utils-base.spec.in
xes-utils-base-0.9/gentoo/: xes-utils-base.ebuild.in
xes-utils-base-0.9/src/: Makefile.am  Makefile.in  functions-xes.sh  functions-xes.sh.in  xes-getty  xes-gpio  xes-i2c-register  xes-showecc  xes-showtemp
xes-utils-boards-0.13/: Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  xes-utils-boards.ebuild.in  xes-utils-boards.spec.in
xes-utils-boards-0.13/src/: Makefile.am  Makefile.in  README  global.conf  xact1011.conf  xact1012.conf  xcalibur1412.conf  xcalibur4101.conf  xcalibur4301.conf  xcalibur4331.conf  xcalibur4341.conf  xcalibur4401.conf  xcalibur4402.conf  xcalibur4403.conf  xcalibur4440.conf  xcalibur4441.conf  xcalibur4443.conf  xcalibur4444.conf  xcalibur44xx.conf  xcalibur4500.conf  xcalibur4501.conf  xcalibur4530.conf  xcalibur4531.conf  xcalibur4533.conf  xcalibur4540.conf  xcalibur4544.conf  xcalibur4545.conf  xcalibur4640.conf  xcalibur4641.conf  xcalibur4643.conf  xcalibur4645.conf  xcalibur4646.conf  xcalibur4647.conf  xcalibur4690.conf  xpedite710x.conf  xpedite7130.conf  xpedite7170.conf  xpedite7171.conf  xpedite7172.conf  xpedite7201.conf  (+45 more)
