distconfdir=$(sysconfdir)/xes/boards
distconf_DATA = \
    README \
    global.conf \
    xact1011.conf \
    xact1012.conf \
    xcalibur1412.conf \
    xcalibur4101.conf \
    xcalibur4301.conf \
    xcalibur4331.conf \
    xcalibur4341.conf \
    xcalibur4401.conf \
    xcalibur4402.conf \
    xcalibur4403.conf \
    xcalibur4440.conf \
    xcalibur4441.conf \
    xcalibur4443.conf \
    xcalibur4444.conf \
    xcalibur44xx.conf \
    xcalibur4500.conf \
    xcalibur4501.conf \
    xcalibur4530.conf \
    xcalibur4531.conf \
    xcalibur4533.conf \
    xcalibur4540.conf \
    xcalibur4544.conf \
    xcalibur4545.conf \
    xcalibur4640.conf \
    xcalibur4641.conf \
    xcalibur4643.conf \
    xcalibur4645.conf \
    xcalibur4646.conf \
    xcalibur4647.conf \
    xcalibur4690.conf \
    xpedite710x.conf \
    xpedite7130.conf \
    xpedite7170.conf \
    xpedite7171.conf \
    xpedite7172.conf \
    xpedite7201.conf \
    xpedite7301.conf \
    xpedite7302.conf \
    xpedite7330.conf \
    xpedite7331.conf \
    xpedite7332.conf \
    xpedite737x.conf \
    xpedite7431.conf \
    xpedite7450.conf \
    xpedite7451.conf \
    xpedite7452.conf \
    xpedite745x.conf \
    xpedite7470.conf \
    xpedite7472.conf \
    xpedite7475.conf \
    xpedite7476.conf \
    xpedite7477.conf \
    xpedite7479.conf \
    xpedite7490.conf \
    xpedite7491.conf \
    xpedite74xx.conf \
    xpedite7501.conf \
    xpedite7503.conf \
    xpedite7530.conf \
    xpedite7531.conf \
    xpedite7570.conf \
    xpedite7572.conf \
    xpedite7574.conf \
    xpedite7575.conf \
    xpedite7590.conf \
    xpedite7591.conf \
    xpedite75xx.conf \
    xpedite7650.conf \
    xpedite7670.conf \
    xpedite7672.conf \
    xpedite7674.conf \
    xpedite7676.conf \
    xpedite7677.conf \
    xpedite7691.conf \
    xpedite8101.conf \
    xpedite8102.conf \
    xpedite8103.conf \
    xpedite8150.conf \
    xpedite8152.conf \
    xpedite815x.conf \
    xpedite8171.conf

EXTRA_DIST = $(distconf_DATA)
